--- a/planner/templates/base.html
+++ b/planner/templates/base.html
@@ -6,13 +6,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
+    <link rel="stylesheet" href="{% static 'css/jquery-ui.css' %}">
     <link rel="stylesheet" href="{% static 'planner/style.css' %}">
     <title>{% block title %}{% endblock title %}</title>
 </head>
 
 <body>
     <div class="jumbotron">
-        <h1>Atlantis</h1>
+        <h1>{% block jumbo %}{% endblock jumbo %}</h1>
         <p>Some quote</p>
     </div>
 
@@ -23,6 +24,9 @@
         
     <script src="{% static 'js/jquery-3.5.1.min.js' %}"></script>
     <script src="{% static 'js/bootstrap.js' %}"></script>
+    <script src="{% static 'js/jquery-ui.js' %}"></script>
+    {% block scripts %}{% endblock scripts %}
+        
 </body>
 
 </html>
