--- a/planner/templates/planner/new_budget.html
+++ b/planner/templates/planner/new_budget.html
@@ -7,6 +7,11 @@ New Budget
 
 {% load crispy_forms_tags %}
 
+
+{% block jumbo %}
+    Nuevo Presupuesto
+{% endblock jumbo %}
+    
 {% block content %}
 
 <div class="container">
