--- a/planner/templates/planner/add_elements.html
+++ b/planner/templates/planner/add_elements.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %}
 {% load static %}
+{% load crispy_forms_tags %}
 
 {% block title %}
     Add movement
@@ -15,6 +16,7 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-6 col-md-6">
+                <h3 class="headlines">Gastos</h3>
                 <table class="table table-striped table-condensed" id="expenses">
                     <thead >
                         <tr>
@@ -33,8 +35,11 @@
                 <button type="button" class="btn btn-primary" id="add_expense">Agregar</button>
             </div>
             <div class="col-lg-6 col-md-6">
+                <h3 class="headlines">Ganancias</h3>
+                <form method='POST'>
+                    {% csrf_token %}
                 <table class="table table-striped table-condensed" id="incomes">
-                    <thead >
+                    <thead>
                         <tr>
                             <th>Fecha</th>
                             <th>Importe</th>
@@ -48,6 +53,7 @@
                             </tr>
                         </tbody>
                 </table>
+                </form>
                 <button type="button" class="btn btn-primary" id="add_income">Agregar</button>
             </div>
         </div> 
