--- a/planner/templates/planner/budget.html
+++ b/planner/templates/planner/budget.html
@@ -68,6 +68,7 @@ Budget
                             {% endfor %}
                         </tbody>
                 </table>
+                <a name="" id="" class="btn btn-success move-button" href="{% url 'add' id=budget.id %}" role="button">Agregar movimiento</a>
             </div>
         </div>
     </div>
