--- a/planner/templates/planner/add_elements.html
+++ b/planner/templates/planner/add_elements.html
@@ -13,32 +13,46 @@
 
 
 {% block content %}
-    <div class="container">
+    <div class="container-fluid">
         <div class="row">
-            <div class="col-lg-6 col-md-6">
+            <div class="col-lg-6 col-md-6 table-responsive" id="expenseSection">
                 <h3 class="headlines">Gastos</h3>
-                <table class="table table-striped table-condensed" id="expenses">
+                <form method='POST' id="formExpense">
+                {% csrf_token %}
+                <table class="table table-striped" id="expenses">
                     <thead >
                         <tr>
                             <th>Fecha</th>
                             <th>Importe</th>
                             <th>Descripcion</th>
                             <th>Categoria</th>
+                            <th></th>
                         </tr>
                         </thead>
                         <tbody>
+                            
+                            {% for expense in expenses %}
+                                <tr>
+                                    <td>{{ expense.expense_date }}</td>
+                                    <td>{{ expense.amount }}</td>
+                                    <td>{{ expense.description }}</td>
+                                    <td>{{ expense.category.name }}</td>
+                                </tr>
+                            {% endfor %}
                             <tr>
                         
                             </tr>
                         </tbody>
                 </table>
+                </form>
                 <button type="button" class="btn btn-primary" id="add_expense">Agregar</button>
             </div>
-            <div class="col-lg-6 col-md-6">
+            <div class="col-lg-6 col-md-6 table-responsive" id="incomeSection">
                 <h3 class="headlines">Ganancias</h3>
-                <form method='POST'>
+                <form method='POST' id="formIncome">
                     {% csrf_token %}
-                <table class="table table-striped table-condensed" id="incomes">
+                    <input type="hidden" name="id" value="1">
+                <table class="table table-striped" id="incomes">
                     <thead>
                         <tr>
                             <th>Fecha</th>
@@ -48,6 +62,14 @@
                         </tr>
                         </thead>
                         <tbody>
+                            {% for income in incomes %}
+                            <tr>
+                                <td>{{ income.income_date }}</td>
+                                <td>{{ income.amount }}</td>
+                                <td>{{ income.description }}</td>
+                                <td>{{ income.category.name }}</td>
+                            </tr>
+                            {% endfor %}
                             <tr>
                         
                             </tr>
