--- a/planner/templates/planner/add_elements.html
+++ b/planner/templates/planner/add_elements.html
@@ -1,6 +1,8 @@
 {% extends 'base.html' %}
 {% load static %}
 {% load crispy_forms_tags %}
+{% load humanize %}
+
 
 {% block title %}
     Add movement
@@ -15,9 +17,16 @@
 {% block content %}
     <div class="container-fluid">
         <div class="row">
+            <div class="col-lg-12">
+                <a name="" id="" class="btn btn-info" href="{% url 'budget' id_=budget_id %}" role="button">Volver</a>
+            </div>
+        </div>
+        <div class="row top-buffer">
             <div class="col-lg-6 col-md-6 table-responsive" id="expenseSection">
                 <h3 class="headlines">Gastos</h3>
-                <form method='POST' id="formExpense">
+                <form method='POST' id="formExpense" action="{% url 'get_form' %}">
+                    <input type="hidden" name="id" value="{{ budget_id }}">
+                    <input type="hidden" name="action" value="expense">
                 {% csrf_token %}
                 <table class="table table-striped" id="expenses">
                     <thead >
@@ -34,7 +43,7 @@
                             {% for expense in expenses %}
                                 <tr>
                                     <td>{{ expense.expense_date }}</td>
-                                    <td>{{ expense.amount }}</td>
+                                    <td>{{ expense.amount | intcomma  }}</td>
                                     <td>{{ expense.description }}</td>
                                     <td>{{ expense.category.name }}</td>
                                 </tr>
@@ -49,9 +58,10 @@
             </div>
             <div class="col-lg-6 col-md-6 table-responsive" id="incomeSection">
                 <h3 class="headlines">Ganancias</h3>
-                <form method='POST' id="formIncome">
+                <form method='POST' id="formIncome" action="{% url 'get_form' %}">
                     {% csrf_token %}
-                    <input type="hidden" name="id" value="1">
+                    <input type="hidden" name="id" value="{{ budget_id }}">
+                    <input type="hidden" name="action" value="income">
                 <table class="table table-striped" id="incomes">
                     <thead>
                         <tr>
@@ -65,7 +75,7 @@
                             {% for income in incomes %}
                             <tr>
                                 <td>{{ income.income_date }}</td>
-                                <td>{{ income.amount }}</td>
+                                <td>{{ income.amount | intcomma  }}</td>
                                 <td>{{ income.description }}</td>
                                 <td>{{ income.category.name }}</td>
                             </tr>
