--- a/planner/templates/planner/budget.html
+++ b/planner/templates/planner/budget.html
@@ -68,7 +68,11 @@ Budget
                             {% endfor %}
                         </tbody>
                 </table>
-                <a name="" id="" class="btn btn-success move-button" href="{% url 'add' id=budget.id %}" role="button">Agregar movimiento</a>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-lg-12 text-center">
+                <a class="btn btn-success move-button" href="{% url 'add' id_=budget.id %}" role="button">Agregar movimiento</a>
             </div>
         </div>
     </div>
