--- a/planner/templates/planner/budget.html
+++ b/planner/templates/planner/budget.html
@@ -39,7 +39,7 @@ Budget
                                 <tr>
                                     <td scope="row">{{ expense.category.name }}</td>
                                     <td>{{ expense.planned_amount | intcomma }}</td>
-                                    <td>{{ expense.actual_amount }}</td>
+                                    <td>{{ total_expenses.expense.category.name }}</td>
                                     <td>0</td>
                                 </tr>
                             {% endfor %}
@@ -62,7 +62,7 @@ Budget
                                 <tr>
                                     <td scope="row">{{ income.category.name }}</td>
                                     <td>{{ income.planned_amount | intcomma }}</td>
-                                    <td>{{ income.actual_amount }}</td>
+                                    <td>{{ total_incomes.Bonificaciones }}</td>
                                     <td>0</td>
                                 </tr>
                             {% endfor %}
