--- a/planner/templates/planner/budget.html
+++ b/planner/templates/planner/budget.html
@@ -10,23 +10,49 @@ Budget
 {% endblock title %}
 
 {% block jumbo %}
-    {{ month }} 2020
+    <span class="oi oi-calendar"></span> {{ month }} 2020
 {% endblock jumbo %}
     
 
 {% block content %}
-    <div class="container">
+    <div class="container-fluid">
         <div class="row">
             <div class="col-lg-6 col-md-6">
                  <h2 class="headlines">Presupuesto mensual</h2>
+                 <hr class="my-4">
             </div>
             <div class="col-lg-6 col-md-6">
-                <h3 class="headlines">Saldo inicial:  ${{ budget.initial_amoumt | intcomma }}</h3>
+                <h2 class="headlines">Saldo inicial:  ${{ budget.initial_amoumt | intcomma }}</h2>
+                <hr class="my-4">
+           </div>
+        </div>
+        <div class="row top-buffer">
+            <div class="col-lg-5 col-md-5">
+            </div>
+            <div class="col-lg-4 col-md-4 offset-lg-2 offset-md-2 text-center">
+                <div class="jumbotron">
+                    <p class="lead">50%</p>
+                    <p>Aumento total</p>
+                    <hr class="my-2">
+                    <p class="lead">$5000</p>
+                    <p>Ahorro este mes</p>
+                </div>
            </div>
         </div>
         <div class="row top-buffer">
             <div class="col-lg-6 col-md-6">
-                <h3 class="headlines">Gastos</h3>
+                <h3 class="headlines mb-4">Gastos</h3>
+                <h5 class="headlines">Total Previsto: <strong>${{ total_planned_ex | intcomma }}</strong></h5>
+                <h5 class="headlines">Total Real: <strong>${{ total_expenses | intcomma }}</strong></h5>
+            </div>
+            <div class="col-lg-6 col-md-6">
+                <h3 class="headlines mb-4">Gananacias</h3>
+                <h5 class="headlines">Total Previsto: <strong>${{ total_planned_in | intcomma }}</strong></h5>
+                <h5 class="headlines">Total Real: <strong>${{ total_incomes | intcomma }}</strong></h5>
+           </div>
+        </div>
+        <div class="row top-buffer">
+            <div class="col-lg-6 col-md-6">
                 <table class="table table-striped table-condensed">
                     <thead class="thead-inverse">
                         <tr>
@@ -40,16 +66,15 @@ Budget
                             {% for expense in planned_expenses %}
                                 <tr>
                                     <td scope="row">{{ expense.category.name }}</td>
-                                    <td>{{ expense.planned_amount | intcomma }}</td>
-                                    <td>{{ total_expenses | get_item:expense.category.name | intcomma }}</td>
-                                    <td>{{ total_expenses | get_item:expense.category.name | diff:expense.planned_amount | intcomma }}</td>
+                                    <td>${{ expense.planned_amount | intcomma }}</td>
+                                    <td>${{ total_expenses_cat | get_item:expense.category.name | intcomma }}</td>
+                                    <td>${{ total_expenses_cat | get_item:expense.category.name | diff:expense.planned_amount | intcomma }}</td>
                                 </tr>
                             {% endfor %}
                         </tbody>
                 </table>
             </div>
             <div class="col-lg-6 col-md-6">
-                <h3 class="headlines">Ganancias</h3>
                 <table class="table table-striped table-condensed">
                     <thead class="thead-inverse">
                         <tr>
@@ -63,9 +88,9 @@ Budget
                             {% for income in planned_incomes %}
                                 <tr>
                                     <td scope="row">{{ income.category.name }}</td>
-                                    <td>{{ income.planned_amount | intcomma }}</td>
-                                    <td>{{ total_incomes | get_item:income.category.name | intcomma }}</td>
-                                    <td>{{ total_incomes | get_item:income.category.name | diff:income.planned_amount | intcomma }}</td>
+                                    <td>${{ income.planned_amount | intcomma }}</td>
+                                    <td>${{ total_incomes_cat | get_item:income.category.name | intcomma }}</td>
+                                    <td>${{ total_incomes_cat | get_item:income.category.name | diff:income.planned_amount | intcomma }}</td>
                                 </tr>
                             {% endfor %}
                         </tbody>
@@ -74,7 +99,7 @@ Budget
         </div>
         <div class="row">
             <div class="col-lg-12 text-center">
-                <a class="btn btn-success move-button" href="{% url 'add' id_=budget.id %}" role="button">Agregar movimiento</a>
+                <a class="btn btn-success move-button" href="{% url 'add' id_=budget.id %}" role="button">Agregar movimiento <i class="oi oi-task"></i></a>
             </div>
         </div>
     </div>
