More styles and links between pages

--- a/planner/templates/base.html
+++ b/planner/templates/base.html
@@ -7,8 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
     <link rel="stylesheet" href="{% static 'css/jquery-ui.css' %}">
+    <link rel="stylesheet" href="{% static 'fonts/css/all.min.css' %}">
     <link rel="stylesheet" href="{% static 'planner/style.css' %}">
-    <link rel="stylesheet" href="{% static 'css/icons/font/css/open-iconic-bootstrap.css' %}">
     <title>{% block title %}{% endblock title %}</title>
 </head>
 
@@ -23,7 +23,7 @@
     {% endblock content %}
         
     <script src="{% static 'js/jquery-3.5.1.min.js' %}"></script>
-    <script src="{% static 'js/bootstrap.js' %}"></script>
+    <script src="{% static 'js/bootstrap.min.js' %}"></script>
     <script src="{% static 'js/jquery-ui.js' %}"></script>
     {% block scripts %}{% endblock scripts %}
         
