--- a/planner/templates/planner/add_element_snippet.html
+++ b/planner/templates/planner/add_element_snippet.html
@@ -15,6 +15,6 @@
 <td>
         {{ form.category | as_crispy_field }}
 </td>
-<td class="delete-row">
-        <span class="oi oi-x" aria-hidden="true"></span>
+<td>
+        <i class="fas fa-times delete-row"></i>
 </td>
