--- a/planner/static/planner/style.css
+++ b/planner/static/planner/style.css
@@ -25,15 +25,36 @@
     border-color: #01A182;
 }
 
-.delete-row {
-    cursor: pointer;
+.fa-check, .fa-arrow-left,
+.fa-plus, .fa-save {
+    font-size: 13px;
 }
 
-.oi-plus, .oi-check, 
-.oi-arrow-thick-left, .oi-task {
-    font-size: 12px;
+.fa-times {
+    font-size: 18px;
+    cursor: pointer;
+    margin-top: 8px;
 }
 
 #expenses, #incomes {
     table-layout: fixed;
+}
+
+.saving-month-box {
+    padding: 32px 16px 32px 16px;
+}
+
+.saving-month-box > p {
+    color: #2E4053;
+    font-weight: bold;
+}
+
+#goHome {
+    float: right;
+    text-decoration: none;
+    color: inherit;
+}
+
+#goHome:hover {
+    color: #222f3e;
 }
